manifests/base/network-policies/09-session-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-session-db-ingress
  namespace: sock-shop
spec:
  podSelector:
    matchLabels:
      name: session-db
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: user
    ports:
    - port: 6379
  - from:
    - podSelector:
        matchLabels:
          name: front-end
    ports:
    - port: 6379
